--- a/cfg/Shadoweee/keniq.cfg
+++ b/cfg/Shadoweee/keniq.cfg
@@ -265,7 +265,7 @@ alias "2" "mat_monitorgamma 1.6"
 alias "3" "mat_monitorgamma 1.905657"
 alias "4" "mat_setvideomode 1280 1024 0"
 alias "dot" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthickness 1.5; cl_crosshairgap 5000; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshaircolor_b 0"
-alias "back" "exec BindCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec Shadoweee/KeniqCleaner.cfg; exec shadlauncher.cfg"
 alias "server" "exec BindCleaner.cfg; exec ServerOperator/serveroperatorlauncher.cfg"
 
 //AliasInactice
@@ -275,7 +275,6 @@ alias "7" "echo   "
 alias "8" "echo   "
 alias "9" "echo   "
 alias "10" "echo   "
-alias "11" "echo   "
 
 
 clear
