--- a/cfg/Shadoweee/shadstary.cfg
+++ b/cfg/Shadoweee/shadstary.cfg
@@ -235,15 +235,7 @@ alias "4" "mat_setvideomode 1024 768 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "fps" "r_drawparticles 0; muzzleflash_light 0; r_eyemove 0; r_eyegloss 0; func_break_max_pieces 0; mat_disable_bloom 1"
 alias "normal" "r_drawparticles 1; muzzleflash_light 1; r_eyemove 1; r_eyegloss 1; func_break_max_pieces 15; mat_disable_bloom 0"
-alias "back" "exec BindCleaner.cfg; exec shadlauncher.cfg"
-
-//AliasInactice
-alias "6" "echo   "
-alias "7" "echo   "
-alias "8" "echo   "
-alias "9" "echo   "
-alias "10" "echo   "
-alias "11" "echo   "
+alias "back" "exec Shadoweee/shadstaryCleaner.cfg; exec shadlauncher.cfg"
 
 //klasyczny modul ladowania
 
