--- a/cfg/Shadoweee/shadtrolling.cfg
+++ b/cfg/Shadoweee/shadtrolling.cfg
@@ -231,7 +231,7 @@ alias "4" "mat_setvideomode 1024 768 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "6" "mat_setvideomode 1920 1080 0"
 alias "7" "mat_setvideomode 2560 1440 0"
-alias "back" "exec BindCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "Shadoweee/shadtrollingCleaner.cfg; exec shadlauncher.cfg"
 alias "r" "ignorerad"
 alias "s" "toggle voice_loopback 0 1"
 alias "slam" "exec slam; clear; la"
@@ -239,12 +239,6 @@ alias "+hjump" "+jump; +duck"
 alias "-hjump" "-jump; -duck"
 bind "space" "+hjump"
 bind "x" "slam_play;voice_loopback 0"
-
-//AliasInactice
-alias "8" "echo   "
-alias "9" "echo   "
-alias "10" "echo   "
-alias "11" "echo   "
 
 //SpamBindy
 
