--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -1,69 +1,12 @@
 unbindall
-bind "0" "slot10; cl_righthand 1"
-bind "1" "slot1; cl_righthand 1"
-bind "2" "slot2; cl_righthand 1"
-bind "3" "slot3; cl_righthand 0"
-bind "4" "slot4; cl_righthand 1"
-bind "5" "slot5; cl_righthand 1"
-bind "6" "slot6; cl_righthand 1"
-bind "7" "slot7; cl_righthand 1"
-bind "8" "slot8; cl_righthand 1"
-bind "9" "slot9; cl_righthand 1"
 bind "a" "+moveleft"
-bind "b" "buymenu"
-bind "c" "radio3"
 bind "d" "+moveright"
-bind "e" "+use"
-bind "f" "toggle cl_righthand 0 1"
-bind "g" "drop"
-bind "h" "commandmenu"
-bind "i" "showbriefing"
-bind "j" "toggle bot_crouch 0 1"
-bind "l" "toggle bot_mimic 0 1"
-bind "m" "+csmoke"
-bind "n" "nightvision"
-bind "o" "buyequip"
-bind "q" "+switch"
-bind "r" "+reload; r_cleardecals"
 bind "s" "+back"
-bind "t" "+spray_menu"
-bind "u" "messagemode2"
-bind "v" "+lookatweapon"
 bind "w" "+forward"
-bind "x" "radio2"
-bind "y" "messagemode"
-bind "z" "radio1"
-bind "]" "invnext"
-bind "'" "+moveup"
 bind "`" "toggleconsole"
-bind "," "buy primammo"
-bind "." "buy secammo"
-bind "/" "+movedown"
-bind "-" "sizedown"
-bind "=" "sizeup"
-bind "SPACE" "+hjump"
-bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
-bind "INS" "+klook"
-bind "END" "centerview"
-bind "PGUP" "+lookup"
-bind "PGDN" "+lookdown"
-bind "PAUSE" "pause"
-bind "SHIFT" "+speed;r_cleardecals"
-bind "ALT" "+jumpthrow"
-bind "CTRL" "+duck;r_cleardecals"
-bind "LEFTARROW" "+left"
-bind "RIGHTARROW" "+right"
-bind "F2" "askconnect_accept"
-bind "F3" "autobuy"
-bind "F4" "rebuy"
-bind "F5" "jpeg"
-bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE4" "+voicerecord"
-bind "MWHEELUP" "+jump"
-bind "MWHEELDOWN" "+jump"
 @panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
@@ -125,16 +68,16 @@ cl_bobcycle "0.98"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
 cl_clanid "32936634"
-cl_cmdrate "64.000000"
+cl_cmdrate "128.000000"
 cl_color "1"
 cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
 cl_crosshair_dynamic_maxdist_splitratio "0"
 cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.300000"
-cl_crosshair_dynamic_splitdist "5"
-cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "0.100000"
+cl_crosshair_dynamic_splitalpha_outermod "0.3"
+cl_crosshair_dynamic_splitdist "3.5"
+cl_crosshair_friendly_warning "0"
+cl_crosshair_outlinethickness "0.1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
@@ -146,7 +89,7 @@ cl_crosshaircolor_r "-1000"
 cl_crosshairdot "0"
 cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
+cl_crosshairscale "600"
 cl_crosshairsize "2"
 cl_crosshairstyle "4"
 cl_crosshairthickness "1"
@@ -167,7 +110,7 @@ cl_fixedcrosshairgap "0"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
-cl_hide_avatar_images ""
+cl_hide_avatar_images "0"
 cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "5"
@@ -190,7 +133,7 @@ cl_obs_interp_enable "0"
 cl_observercrosshair "1"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
-cl_promoted_settings_acknowledged "1:1574528155342"
+cl_promoted_settings_acknowledged "1:1574620948091"
 cl_quickinventory_lastinv "0"
 cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "0"
@@ -200,7 +143,7 @@ cl_radar_scale "0.5"
 cl_radar_square_with_scoreboard "1"
 cl_radial_radio_tab "0"
 cl_radialmenu_deadzone_size "0.04"
-cl_righthand "1"
+cl_righthand "0"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
 cl_scalecrosshair "1"
@@ -305,7 +248,7 @@ m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "1.6"
+mat_monitorgamma "2.2"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
@@ -339,14 +282,14 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "Shadoweee"
+password "eloleszcze"
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_8_1_E8907D2E "mg_gd_rialto"
-player_competitive_maplist_8_8_1_475B5511 "mg_de_mirage,mg_de_inferno,mg_de_nuke,mg_de_train,mg_de_dust2"
+player_competitive_maplist_2v2_8_1_E8907D2E "mg_de_shortdust"
+player_competitive_maplist_8_8_1_475B5511 "mg_de_mirage,mg_de_inferno,mg_de_nuke,mg_de_train"
 player_nevershow_communityservermessage "0"
 player_survival_list_8_1_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
-player_teamplayedlast "3"
+player_teamplayedlast "2"
 player_wargames_list2_8_1_604 "mg_skirmish_armsrace"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
@@ -390,17 +333,19 @@ snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.200000"
 snd_mute_losefocus "1"
-snd_mute_mvp_music_live_players "1"
+snd_mute_mvp_music_live_players "0"
 snd_mvp_volume "0.061973"
 snd_pitchquality "1"
 snd_roundend_volume "0.023003"
 snd_roundstart_volume "0.021873"
-snd_surround_speakers "-1"
+snd_surround_speakers "0"
 snd_tensecondwarning_volume "0.015712"
 sound_device_override "{0.0.0.00000000}.{8c4004d7-88d1-48f1-b12b-32acd174d57f}"
 spec_replay_autostart "0"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
+spec_xray_dropped_defusers "1"
+spec_xray_dropped_unoccluded "1"
 ss_splitmode "0"
 store_version "1"
 suitvolume "0.25"
@@ -443,14 +388,14 @@ ui_playsettings_maps_official_casual "mg_casualdelta"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
 ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
-ui_playsettings_mode_official_v20 "competitive"
-ui_playsettings_survival_solo "0"
+ui_playsettings_mode_official_v20 "survival"
+ui_playsettings_survival_solo "1"
 ui_playsettings_warmup_map_name "de_mirage"
-ui_popup_weaponupdate_version "0"
+ui_popup_weaponupdate_version "1"
 ui_setting_advertiseforhire_auto "1"
-ui_setting_advertiseforhire_auto_last "/competitive"
+ui_setting_advertiseforhire_auto_last "/cooperative"
 ui_steam_overlay_notification_position "bottomright"
-ui_vanitysetting_loadoutslot_ct "rifle4"
+ui_vanitysetting_loadoutslot_ct "melee"
 ui_vanitysetting_loadoutslot_t "rifle4"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
@@ -468,7 +413,7 @@ voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
 voice_modenable "1"
-voice_positional "0"
+voice_positional "1"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
