--- a/cfg/shadlauncher.cfg
+++ b/cfg/shadlauncher.cfg
@@ -14,33 +14,28 @@ bind "Mouse2" "+attack2"
 //launcher
 
 //Shadoweee
-alias "1" "exec BindCleaner.cfg; exec Shadoweee/shadpanorama.cfg"
-alias "2" "exec BindCleaner.cfg; exec Shadoweee/shadstary.cfg"
-alias "3" "exec BindCleaner.cfg; exec Shadoweee/shadtrolling.cfg"
-alias "4" "exec BindCleaner.cfg; exec Shadoweee/shadooo.cfg"
-alias "5" "exec BindCleaner.cfg; exec Shadoweee/keniq.cfg"
+alias "1" "exec Shadoweee/shadpanoramaCleaner.cfg; exec Shadoweee/shadpanorama.cfg"
+alias "2" "exec Shadoweee/shadstaryCleaner.cfg; exec Shadoweee/shadstary.cfg"
+alias "3" "exec Shadoweee/shadtrollingCleaner.cfg; exec Shadoweee/shadtrolling.cfg"
+alias "4" "exec Shadoweee/shadoooCleaner.cfg; exec Shadoweee/shadooo.cfg"
+alias "5" "exec Shadoweee/KeniqCleaner.cfg; exec Shadoweee/keniq.cfg"
+alias "6" "exec Shadoweee/MaarekL2020Cleaner.cfg; exec Shadoweee/MaarekL2020.cfg"
+alias "7" "exec Shadoweee/BleedCleaner.cfg; exec Shadoweee/Bleed.cfg"
+
 //Needs reworking
 alias "vid" "exec BindCleaner.cfg; exec Shadoweee/avidiots.cfg"
 alias "trening" "exec BindCleaner.cfg; exec Shadoweee/shadsmokes.cfg"
 
 
 //ServerOperator
-alias "server" "exec BindCleaner.cfg; exec ServerOperator/CleanerSO.cfg"
+alias "server" "exec ServerOperator/serveroperatorlauncherCleaner; exec ServerOperator/serveroperatorlauncher"
 
 //ShadREC
 alias "rec" "exec BindCleaner.cfg; exec ShadREC/CleanerREC.cfg"
 
-//HiddenExecs
+//HiddenEvents
 alias "dev" "mat_setvideomode 1000 1000 1; exec shadlauncher.cfg"
 alias "back" "exec BindCleaner.cfg; exec shadlauncher.cfg"
-
-//AliasInactice
-alias "6" "echo   "
-alias "7" "echo   "
-alias "8" "echo   "
-alias "9" "echo   "
-alias "10" "echo   "
-alias "11" "echo   "
 
 //TRENING do przerobienia
 
@@ -63,6 +58,8 @@ echo "| Type 2,       to run Shad Oldeee                   |"
 echo "| Type 3,       to run Shad Trolling                 |"
 echo "| Type 4,       to run Shadooo                       |"
 echo "| Type 5,       to run Keniq                         |"
+echo "| Type 6,       to run Maarek                        |"
+echo "| Type 7,       to run Bleed                         |"
 echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
 echo "| Type vid,     to run aVidiots                      |"
 echo "| Type trening, to run shadsmokes | nds rwk          |"
