--- a/cfg/vmodel_shareconf.cfg
+++ b/cfg/vmodel_shareconf.cfg
@@ -9,30 +9,31 @@ bind "6" "slot6; cl_righthand 1"
 bind "7" "slot7; cl_righthand 1"
 bind "8" "slot8; cl_righthand 1"
 bind "9" "slot9; cl_righthand 1"
-bind "a" "+moveleft"
+bind "a" "+moveleft; r_cleardecals"
 bind "b" "buymenu"
 bind "c" "radio3"
-bind "d" "+moveright"
+bind "d" "+moveright; r_cleardecals"
 bind "e" "+use"
 bind "f" "toggle cl_righthand 0 1"
 bind "g" "drop"
 bind "h" "commandmenu"
 bind "i" "showbriefing"
-bind "j" "toggle bot_crouch 0 1"
-bind "l" "toggle bot_mimic 0 1"
-bind "m" "+csmoke"
+bind "j" "cheer"
+bind "k" "+voicerecord"
+bind "m" "+crosshairsmoke"
 bind "n" "nightvision"
 bind "o" "buyequip"
-bind "q" "+switch"
+bind "q" "lastinv; r_cleardecals"
 bind "r" "+reload; r_cleardecals"
-bind "s" "+back"
+bind "s" "+back; r_cleardecals"
 bind "t" "+spray_menu"
 bind "u" "messagemode2"
 bind "v" "+lookatweapon"
-bind "w" "+forward"
+bind "w" "+forward; r_cleardecals"
 bind "x" "radio2"
 bind "y" "messagemode"
 bind "z" "radio1"
+bind "[" "invprev"
 bind "]" "invnext"
 bind "'" "+moveup"
 bind "`" "toggleconsole"
@@ -41,6 +42,7 @@ bind "." "buy secammo"
 bind "/" "+movedown"
 bind "-" "sizedown"
 bind "=" "sizeup"
+bind "ENTER" "+attack"
 bind "SPACE" "+hjump"
 bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
@@ -50,8 +52,11 @@ bind "PGUP" "+lookup"
 bind "PGDN" "+lookdown"
 bind "PAUSE" "pause"
 bind "SHIFT" "+speed;r_cleardecals"
+bind "ALT" "+strafe"
 bind "CTRL" "+duck;r_cleardecals"
+bind "UPARROW" "+forward"
 bind "LEFTARROW" "+left"
+bind "DOWNARROW" "+back"
 bind "RIGHTARROW" "+right"
 bind "F2" "askconnect_accept"
 bind "F3" "autobuy"
@@ -60,10 +65,8 @@ bind "F5" "jpeg"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE4" "+voicerecord"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
-@panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
@@ -97,8 +100,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1530967308"
-cachedvalue_count_teammates "1530967320"
+cachedvalue_count_partybrowser "1503772178"
+cachedvalue_count_teammates "1503779342"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -116,22 +119,38 @@ chet_debug_idle "0"
 cl_allowdownload "1"
 cl_allowupload "1"
 cl_autohelp "1"
-cl_autowepswitch "0"
-
-
-//cl_bob
-cl_bob_lower_amt 5;
-cl_bobamt_lat 0.33;
-cl_bobamt_vert 0.14;
-cl_bobcycle 0.98;
-
-
+cl_autowepswitch "1"
+cl_bob_lower_amt "5.0"
+cl_bobamt_lat "0.1"
+cl_bobamt_vert "0.1"
+cl_bobcycle "0.98"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "32936634"
-cl_cmdrate "64.000000"
-cl_color "1"
-cl_crosshaircolor 1; cl_crosshairdot 0; cl_crosshairgap -3; cl_crosshairsize 2; cl_crosshairstyle 4; cl_crosshairalpha 250; cl_crosshairusealpha 1; cl_crosshairthickness 1; cl_crosshair_drawoutline 0; cl_crosshair_sniper_width 1; cl_crosshaircolor_r -1000; cl_crosshaircolor_g 0; cl_crosshaircolor_b -1000;
+cl_clanid "29347806"
+cl_clock_24hour "1"
+cl_cmdrate "128"
+cl_color "2"
+cl_crosshair_drawoutline "1"
+cl_crosshair_dynamic_maxdist_splitratio "0"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.300000"
+cl_crosshair_dynamic_splitdist "5"
+cl_crosshair_outlinethickness "1.500000"
+cl_crosshair_sniper_show_normal_inaccuracy "0"
+cl_crosshair_sniper_width "3"
+cl_crosshairalpha "255"
+cl_crosshaircolor "5"
+cl_crosshaircolor_b "50"
+cl_crosshaircolor_g "50"
+cl_crosshaircolor_r "250"
+cl_crosshairdot "0"
+cl_crosshairgap "0"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairscale "0"
+cl_crosshairsize "6.000000"
+cl_crosshairstyle "2"
+cl_crosshairthickness "0.5"
+cl_crosshairusealpha "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
 cl_detail_avoid_radius "64"
@@ -142,7 +161,8 @@ cl_disablehtmlmotd "0"
 cl_dm_buyrandomweapons "1"
 cl_downloadfilter "all"
 cl_embedded_stream_audio_volume "60"
-cl_embedded_stream_audio_volume_xmaster "0.6"
+cl_embedded_stream_audio_volume_xmaster "1"
+cl_error_message_check_xboxdvr2 "1503779367"
 cl_fixedcrosshairgap "0"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
@@ -154,36 +174,42 @@ cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
 cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
+cl_inv_showdividerline "0"
 cl_inventory_saved_filter2 "all"
-cl_inventory_saved_sort2 "inv_sort_rarity"
+cl_inventory_saved_sort2 "inv_sort_age"
 cl_join_advertise "1"
+cl_loadout_colorweaponnames "0"
 cl_minimal_rtt_shadows "1"
 cl_mouselook "1"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
-cl_obs_interp_enable "0"
+cl_obs_interp_enable "1"
 cl_observercrosshair "1"
+cl_operation_premium_reminder_op08 "0"
 cl_playerspray_auto_apply "1"
-cl_radar_always_centered "0"
-cl_radar_icon_scale_min "1"
+cl_radar_always_centered "1"
+cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
-cl_radar_scale "0.5"
+cl_radar_scale "0.7"
 cl_radar_square_with_scoreboard "1"
-cl_righthand "0"
+cl_righthand "1"
 cl_rumblescale "1.0"
 cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
-cl_show_clan_in_death_notice "0"
+cl_show_clan_in_death_notice "1"
 cl_showhelp "1"
 cl_showloadout "1"
-cl_showpluginmessages2 "0"
+cl_showpluginmessages "1"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "0"
-cl_teamid_overhead_always "2"
+cl_spec_mode "5"
+cl_teamid_overhead_always "1"
+cl_teamid_overhead_name_alpha "100"
+cl_teamid_overhead_name_fadetime "1.0"
 cl_teammate_colors_show "2"
+cl_thirdperson "0"
 cl_timeout "30"
 cl_updaterate "64.000000"
-cl_use_opens_buy_menu "0"
+cl_use_opens_buy_menu "1"
 cl_viewmodel_shift_left_amt "1.5"
 cl_viewmodel_shift_right_amt "0.75"
 closecaption "0"
@@ -191,7 +217,9 @@ closeonbuy "0"
 commentary_firstrun "0"
 con_enable "1"
 crosshair "1"
+cursortimeout "60.0"
 dsp_enhance_stereo "0"
+econ_highest_baseitem_seen "64"
 engine_no_focus_sleep "50"
 force_audio_english "0"
 func_break_max_pieces "15"
@@ -250,7 +278,9 @@ joy_yawthreshold "0.15"
 joystick "0"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
+key_bind_version "2"
 lobby_default_privacy_bits1 "0"
+lobby_voice_chat_enabled "0"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
@@ -278,18 +308,17 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
-mm_dedicated_search_maxping "43"
+mm_dedicated_search_maxping "25.000000"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "Śadołi"
+name "🈁 Shadoweee ☭"
 net_allow_multicast "1"
-net_graph "1"
+net_graph "0"
 net_graphheight "64"
 net_graphholdsvframerate "0"
-net_graphipc "0"
 net_graphmsecs "400"
-net_graphpos "3"
-net_graphproportionalfont "0.9"
+net_graphpos "1"
+net_graphproportionalfont "1"
 net_graphshowinterp "1"
 net_graphshowlatency "1"
 net_graphshowsvframerate "0"
@@ -301,12 +330,24 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "Shadoweee"
+password ""
 play_distance "1"
 player_botdifflast_s "2"
+player_competitive_maplist_8_7_1_7D70A304 "mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_mirage,mg_de_cache,mg_de_austria,mg_de_blackgold,mg_de_lite,mg_cs_insertion,mg_de_shipped,mg_de_thrill,mg_cs_agency,mg_de_overpass,mg_de_cbble"
+player_gamemodelast_m "0"
+player_gamemodelast_s "0"
+player_gametypelast_m "3.000000"
+player_gametypelast_s "0"
+player_last_leaderboards_filter "0"
+player_last_leaderboards_mode "0"
+player_last_leaderboards_panel "0"
+player_last_medalstats_category "0"
+player_last_medalstats_panel "0"
+player_maplast_m "0"
+player_maplast_s "0"
+player_medalstats_most_recent_time "0"
 player_nevershow_communityservermessage "0"
-player_teamplayedlast "3"
-player_wargames_list2_7_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
+player_teamplayedlast "2"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -316,9 +357,9 @@ r_eyeshift_x "0"
 r_eyeshift_y "0"
 r_eyeshift_z "0"
 r_eyesize "0"
-rate "786432"
-safezonex "1.000000"
-safezoney "1.000000"
+rate "128000"
+safezonex "1.0"
+safezoney "1.0"
 sc_enable "1.0"
 sc_joystick_map "1"
 sc_pitch_sensitivity "1.0"
@@ -327,39 +368,39 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.97"
+sensitivity "0.97"
+sf_ui_tint "2"
 sk_autoaim_mode "1"
-skill "1"
-snd_deathcamera_volume "0.000000"
+skill "1.000000"
+snd_deathcamera_volume "1.0"
 snd_duckerattacktime "0.5"
 snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
 snd_hrtf_distance_behind "100"
-snd_hwcompat "0"
-snd_mapobjective_volume "0.019751"
-snd_menumusic_volume "0.000000"
+snd_mapobjective_volume "1.0"
+snd_menumusic_volume "1.0"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
 snd_mixahead "0.05"
-snd_music_selection "1"
-snd_music_volume_onetime_reset_2 "1"
-snd_musicvolume_multiplier_inoverlay "0.200000"
+snd_music_selection "2"
+snd_musicvolume "0.000000"
+snd_musicvolume_multiplier_inoverlay "0.1"
 snd_mute_losefocus "1"
-snd_mvp_volume "0.061973"
 snd_pitchquality "1"
-snd_roundend_volume "0.023003"
-snd_roundstart_volume "0.021873"
-snd_tensecondwarning_volume "0.015712"
-sound_device_override "{0.0.0.00000000}.{8c4004d7-88d1-48f1-b12b-32acd174d57f}"
-spec_replay_autostart "0"
+snd_roundend_volume "1.0"
+snd_roundstart_volume "1.0"
+snd_tensecondwarning_volume "1.0"
+snd_use_hrtf "0"
+sound_device_override "{0.0.0.00000000}.{a0e46191-35f4-41e3-898a-0725ea923c99}"
+spec_replay_autostart "1"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
 store_version "1"
 suitvolume "0.25"
-sv_forcepreload "0"
+sv_forcepreload "1"
 sv_log_onefile "0"
 sv_logbans "0"
 sv_logecho "1"
@@ -369,52 +410,33 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_dust"
+sv_skyname "mpa115"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
 sv_unlockedchapters "1"
 sv_voiceenable "1"
-test_convar "0"
+sys_antialiasing "2"
+sys_aspectratio "-1"
+sys_refldetail "0"
 texture_budget_background_alpha "128"
 texture_budget_panel_bottom_of_history_fraction ".25"
 texture_budget_panel_height "284"
 texture_budget_panel_width "512"
 texture_budget_panel_x "0"
 texture_budget_panel_y "450"
+tr_best_course_time "0"
+tr_completed_training "0"
 tv_nochat "0"
-ui_inventorysettings_recently_acknowledged ""
-ui_playsettings_maps_listen_casual "random_classic"
-ui_playsettings_maps_listen_competitive "random_classic"
-ui_playsettings_maps_listen_deathmatch "random_classic"
-ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
-ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
-ui_playsettings_maps_official_casual "mg_casualdelta"
-ui_playsettings_maps_official_deathmatch "mg_casualsigma"
-ui_playsettings_maps_workshop ""
-ui_playsettings_mode_listen "casual"
-ui_playsettings_warmup_map_name "de_mirage"
-ui_steam_overlay_notification_position "bottomright"
-ui_vanitysetting_itemid "17293822569102704649"
-ui_vanitysetting_loadoutslot "rifle4"
-ui_vanitysetting_model "models/player/custom_player/legacy/tm_leet_variantb.mdl"
-ui_vanitysetting_team "t"
+ui_steam_overlay_notification_position "topleft"
 vgui_message_dialog_modal "1"
-
-//viewmodel
-viewmodel_fov 68;
-viewmodel_offset_x 2.5;
-viewmodel_offset_y 0;
-viewmodel_offset_z -1;
-viewmodel_presetpos 0;
-cl_viewmodel_shift_left_amt 1.5;
-cl_viewmodel_shift_right_amt 0.75;
-viewmodel_recoil 1;
-cl_righthand 1;
-
-
+viewmodel_fov "63"
+viewmodel_offset_x "1.25"
+viewmodel_offset_y "-0.150000"
+viewmodel_offset_z "-2.000000"
+viewmodel_presetpos "0"
 voice_caster_enable "0"
-voice_caster_scale "1.000000"
+voice_caster_scale "1"
 voice_enable "1"
 voice_forcemicrecord "1"
 voice_mixer_boost "0"
@@ -424,69 +446,16 @@ voice_modenable "1"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.600000"
+volume "0.400000"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
+weapon_accuracy_logging "0"
+windows_speaker_config "5"
 xbox_autothrottle "1"
 xbox_throttlebias "100"
 xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
 zoom_sensitivity_ratio_mouse "0.818933027098955175"
-
-alias "-csmoke" "cl_crosshairsize 3;cl_crosshairdot 0;cl_crosshairgap -2; dot"
-alias "+csmoke" "cl_crosshairsize 1337;cl_crosshairdot 0;cl_crosshairgap -5"
-bind "m" "+csmoke"
-alias "+hjump" "+jump; +duck"
-alias "-hjump" "-jump; -duck"
-bind "space" "+hjump"
-alias "+switch" "lastinv"
-alias "-switch" "lastinv"
-alias "1" "bind Mouse4 +voicerecord"
-alias "11" "unbind Mouse4"
-alias "2" "mat_monitorgamma 1.6"
-alias "3" "mat_monitorgamma 2.3"
-alias "4" "mat_setvideomode 1600 1200 0"
-alias "5" "mat_setvideomode 1336 768 0"
-alias "6" "mat_setvideomode 1280 960 0"
-alias "7" "mat_setvideomode 1920 1000 0"
-alias "back" "exec Shadoweee/shadoooCleaner.cfg; exec shadlauncher.cfg"
-alias "+jumpthrow" "+jump;-attack"
-alias "-jumpthrow" "-jump"
-bind alt "+jumpthrow"
-
-alias "dot" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthickness 1.5; cl_crosshairgap 5000; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshaircolor_b 0"
-
-//klasyczny modul ladowania
-
-clear
-
-echo "  _____ _               _                              "
-echo " / ____| |             | |                             "
-echo " | (___| |__   __ _  __| | _____      _____  ___  ___  "
-echo " \___ \| '_ \ / _` |/ _` |/ _ \ \ /\ / / _ \/ _ \/ _ \ "
-echo " ____) | | | | (_| | (_| | (_) \ V  V /  __/  __/  __/ "
-echo "|_____/|_| |_|\__,_|\__,_|\___/ \_/\_/ \___|\___|\___| "
-
-echo "┌──────────────────────────────────────────────────────┐"
-echo "|           Pomyslnie zaladowano exec Shadooo.         |"
-echo "└──────────────────────────────────────────────────────┘"
-echo " "
-echo "┌──────────────────────────────────────────────────────┐"
-echo "| Wpisz 1,    aby zbinodwac Mouse4 pod +voicerecord    |"
-echo "| Wpisz 11,   aby odbinodwac Mouse4 z +voicerecord     |"
-echo "| Wpisz 2,    aby zmienic gamma na 1.6                 |"
-echo "| Wpisz 3,    aby zmienic gamma na 2.3                 |"
-echo "| Wpisz 4,    aby ustawic rozdzialke na 1600 x 1200    |"
-echo "| Wpisz 5,    aby ustawic rozdzialke na 1336 x 768     |"
-echo "| Wpisz 6,    aby ustawic rozdzialke na 1280 x 960     |"
-echo "| Wpisz 7,    aby ustawic rozdzialke na 1920 x 1000    |"
-echo "| Wpisz dot,  aby zmienic celownik na kropke           |"
-echo "| Wpisz back, aby powrócic do wyboru configu           |"
-echo "└──────────────────────────────────────────────────────┘"
-echo " "
-echo "┌──────────────────────────────────────────────────────┐"
-echo "| Exec made by Shadoweee | Version 1.2 @ 26.01.2020    |"
-echo "└──────────────────────────────────────────────────────┘"
