--- a/cfg/ServerOperator/serveroperatorlauncher.cfg
+++ b/cfg/ServerOperator/serveroperatorlauncher.cfg
@@ -10,7 +10,7 @@ alias "5v5" "rcon exec esl5on5.cfg"
 alias "prac" "rcon exec practice.cfg"
 alias "players" "rcon users"
 alias "rr" "rcon mp_restartgame 1"
-
+alias "srcds" "exec ServerOperator/srcdsSupportCleaner.cfg; exec ServerOperator/srcdsSupport"
 
 //Mapy
 alias "inferno" "rcon changelevel de_inferno"
@@ -24,7 +24,8 @@ alias "vertigo" "rcon changelevel de_vertigo"
 //LOGIN
 alias "login" "exec ServerOperator/loginCleaner; exec ServerOperator/login.cfg"
 
-//Print
+//GUI
+
 echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
 echo "  _____                             ____                       _             "
 echo " / ____|                           / __ \                     | |            "
@@ -42,8 +43,8 @@ echo "| Type CON,     to connect to specified server           |"
 echo "| Type 5v5,     to enable 5v5 Competetive Mode [ESL-5v5] |"
 echo "| Type PRAC,    to enable practice mode                  |"
 echo "| Type PLAYERS, to print list of players on the server   |"
+echo "| Type SRCDS,   to enable SRCDS compability              |"
 echo "| Type BACK,    to go back to Shad Launcher!             |"
-echo "| Type RR,      to restart the game                      |"
 echo "└────────────────────────────────────────────────────────┘"
 echo " "
 echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
