--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -74,10 +74,10 @@ cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
 cl_crosshair_dynamic_maxdist_splitratio "0"
 cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.3"
-cl_crosshair_dynamic_splitdist "3.5"
+cl_crosshair_dynamic_splitalpha_outermod "0.300000"
+cl_crosshair_dynamic_splitdist "5"
 cl_crosshair_friendly_warning "0"
-cl_crosshair_outlinethickness "0.1"
+cl_crosshair_outlinethickness "1.500000"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
@@ -89,7 +89,7 @@ cl_crosshaircolor_r "-1000"
 cl_crosshairdot "0"
 cl_crosshairgap "-3"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "600"
+cl_crosshairscale "0"
 cl_crosshairsize "2"
 cl_crosshairstyle "4"
 cl_crosshairthickness "1"
@@ -248,7 +248,7 @@ m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "2.2"
+mat_monitorgamma "1.6"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
@@ -262,7 +262,7 @@ mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "43"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "✪ Shadoweee"
+name "✪ Blet gejmink"
 net_allow_multicast "1"
 net_graph "1"
 net_graphheight "64"
@@ -289,7 +289,7 @@ player_competitive_maplist_2v2_8_1_E8907D2E "mg_de_shortdust"
 player_competitive_maplist_8_8_1_475B5511 "mg_de_mirage,mg_de_inferno,mg_de_nuke,mg_de_train"
 player_nevershow_communityservermessage "0"
 player_survival_list_8_1_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
-player_teamplayedlast "2"
+player_teamplayedlast "3"
 player_wargames_list2_8_1_604 "mg_skirmish_armsrace"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
@@ -359,7 +359,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "nukeblank"
+sv_skyname "sky_dust"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -378,7 +378,7 @@ triple_monitor_mode "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
 ui_nearbylobbies_filter2 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/01/28225/"
+ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/02/28450/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
@@ -413,7 +413,7 @@ voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
 voice_modenable "1"
-voice_positional "1"
+voice_positional "0"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
