--- a/cfg/ServerOperator/login.cfg
+++ b/cfg/ServerOperator/login.cfg
@@ -1,7 +1,7 @@
 clear
 
 //Back
-alias "back" "exec BindCleaner.cfg; exec ServerOperator/serveroperatorlauncher.cfg"
+alias "back" "exec ServerOperator/loginCleaner; exec ServerOperator/serveroperatorlauncherCleaner.cfg; exec ServerOperator/serveroperatorlauncher.cfg"
 
 alias "done" "host_writeconfig ServerOperatorLoginData.cfg; exec ServerOperator/loginCleaner; exec ServerOperator/serveroperatorlauncher.cfg"
 
@@ -17,7 +17,7 @@ echo "                               |___/         "
 echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
 echo " "
 echo "┌────────────────────────────────────────────────────────┐"
-echo "| Set server ADRESS by: rcon_address adress:port         |"
+echo "| Set server ADRESS by: rcon_address [adress:port]       |"
 echo "| Set server PASSWORD by: rcon_password [VALUE]          |"
 echo "| Confirm and save by typing DONE into console!          |"
 echo "| Do NOT save changes by typing BACK into console!       |"
