--- a/cfg/ServerOperator/serveroperatorlauncher.cfg
+++ b/cfg/ServerOperator/serveroperatorlauncher.cfg
@@ -1,16 +1,24 @@
 clear
 
 //Back
-alias "back" "exec ServerOperator/serveroperatorlauncherCleaner; exec shadlauncher.cfg"
+alias "back" "exec ServerOperator/serveroperatorlauncherCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
+
+//BasicUtility
+alias "freeze" "rcon pause"
+alias "unfreeze" "rcon unpause"
+alias "pauza" "rcon mp_pause_match"
+alias "unpauza" "rcon mp_unpause_match"
+alias "mix" "rcon scramble"
+alias "swap" "rcon swap"
 
 //MenuBox
-
 alias "CON" "connect 54.38.134.243:27015; password eloleszcze"
 alias "5v5" "rcon exec esl5on5.cfg"
 alias "prac" "rcon exec practice.cfg"
 alias "players" "rcon users"
 alias "rr" "rcon mp_restartgame 1"
-alias "srcds" "exec ServerOperator/srcdsSupportCleaner.cfg; exec ServerOperator/srcdsSupport"
+alias "srcds" "exec ServerOperator/srcdsSupportCleaner.cfg; exec ServerOperator/srcdsSupportCleaner.cfg; exec ServerOperator/srcdsSupport.cfg"
+alias "ShadREC" "exec ServerOperator/serveroperatorlauncherCleaner.cfg; exec ShadREC/ShadRECserverClientCleaner.cfg; exec ShadREC/ShadRECserverClient.cfg"
 
 //Mapy
 alias "inferno" "rcon changelevel de_inferno"
@@ -34,31 +42,36 @@ echo " \___ \ / _ \ '__\ \ / / _ \ '__| | |  | | '_ \ / _ \ '__/ _` | __/ _ \| '
 echo " ____) |  __/ |   \ V /  __/ |    | |__| | |_) |  __/ | | (_| | || (_) | |   "
 echo "|_____/ \___|_|    \_/ \___|_|     \____/| .__/ \___|_|  \__,_|\__\___/|_|   "
 echo "                                         | |                                 "
-echo "Server Operator by Shadoweee V1.4        |_|                                 "
+echo "Server Operator by Shadoweee V1.2        |_|                                 "
 echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
 echo " "
-echo "┌────────────────────────────────────────────────────────┐"
-echo "| Type LOGIN,   to setup ServerOperator settings         |"
-echo "| Type CON,     to connect to specified server           |"
-echo "| Type 5v5,     to enable 5v5 Competetive Mode [ESL-5v5] |"
-echo "| Type PRAC,    to enable practice mode                  |"
-echo "| Type PLAYERS, to print list of players on the server   |"
-echo "| Type SRCDS,   to enable SRCDS compability              |"
-echo "| Type BACK,    to go back to Shad Launcher!             |"
-echo "└────────────────────────────────────────────────────────┘"
-echo " "
-echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
-echo " "
-echo "┌────────────────────────────────────────────────────────┐"
-echo "| Type inferno,  to change map to de_inferno             |"
-echo "| Type mirage,   to change map to de_mirage              |"
-echo "| Type nuke,     to change map to de_nuke                |"
-echo "| Type train,    to change map to de_train               |"
-echo "| Type dust,     to change map to de_dust II             |"
-echo "| Type overpass, to change map to de_overpass            |"
-echo "| Type vertigo,  to change map to de_vertigo             |"
-echo "└────────────────────────────────────────────────────────┘"
-echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
-password "eloleszcze"
-rcon_adress "54.38.134.243:27015"
-rcon_password "i1cxz71"
+echo "┌────────────────────────────────────────────────────────────────────────────┐"
+echo "| Type LOGIN,   to setup ServerOperator settings             |               |"
+echo "| Type CON,     to connect to specified server               |               |"
+echo "| Type SRCDS,   to enable SRCDS compability                  |    [SRCDS]    |"
+echo "| Type ShadREC, to open ShadREC.server Client                | [ShadREC] [SM]|"
+echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
+echo "| Type FREEZE / UNFREEZE, to stop or resume game RIGHT NOW                   |"
+echo "| Type PUAZA  /  UNPAUZA, to stop or resume game after the round             |"
+echo "| Type MIX,        to mix up the teams                                       |"
+echo "| Type SWAP,       to swap sides of teams [ CT <-> T ]                       |"
+echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
+echo "| Type PRAC,    to enable practice mode                      |               |"
+echo "| Type PLAYERS, to print list of players on the server       |               |"
+echo "| Type BACK,    to go back to Shad Launcher!                 |               |"
+echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
+echo "| Type inferno,   to change map to de_inferno                                |"
+echo "| Type mirage,    to change map to de_mirage                                 |"
+echo "| Type nuke,      to change map to de_nuke                                   |"
+echo "| Type train,     to change map to de_train                                  |"
+echo "| Type dust,      to change map to de_dust II                                |"
+echo "| Type overpass,  to change map to de_overpass                               |"
+echo "| Type vertigo,   to change map to de_vertigo                                |"
+echo "└────────────────────────────────────────────────────────────────────────────┘"
+echo ""
+echo ""
+echo ""
+echo "[ShadREC] This mode requires ShadREC Plugin to be installed on BOTH"
+echo "          client PC AND server."
+echo "[SM]      This mode requires server to have SourceMod installed | www.sourcemod.net
+echo "[SRCDS]   This mode requires SRCDS.pro Server Package | www.srcds.pro"
