--- a/cfg/ServerOperator/serveroperatorlauncherCleaner.cfg
+++ b/cfg/ServerOperator/serveroperatorlauncherCleaner.cfg
@@ -1,3 +1,9 @@
+alias "CON" ""
+alias "prac" ""
+alias "players" ""
+alias "rr" ""
+alias "srcds" ""
+alias "ShadREC" ""
 alias "inferno" ""
 alias "mirage" ""
 alias "nuke" ""
@@ -5,8 +11,10 @@ alias "train" ""
 alias "dust" ""
 alias "overpass" ""
 alias "vertigo" ""
-alias "CON" ""
-alias "5v5" ""
-alias "prac" ""
-alias "players" ""
-alias "rr" ""
+alias "login" ""
+alias "freeze" ""
+alias "unfreeze" ""
+alias "pauza" ""
+alias "unpauza" ""
+alias "mix" ""
+alias "swap" ""
