--- a/cfg/ServerOperator/srcdsSupport.cfg
+++ b/cfg/ServerOperator/srcdsSupport.cfg
@@ -3,7 +3,7 @@ clear
 rcon sv_pausable 1
 
 //Back
-alias "back" "exec ServerOperator/srcdsSupportCleaner.cfg; exec ServerOperator/serveroperatorlauncher.cfg"
+alias "back" "exec ServerOperator/srcdsSupportCleaner.cfg; exec ServerOperator/serveroperatorlauncherCleaner.cfg; exec ServerOperator/serveroperatorlauncher.cfg"
 
 //MenuBox
 alias "players" "rcon users"
@@ -45,7 +45,7 @@ echo "  \___ \| '_ \ / _` |/ _` | \ \/ /  \___ \| '__/ __/ _` / __| | '_ \| '__/
 echo "  ____) | | | | (_| | (_| |  >  <   ____) | | | (_| (_| \__ \_| |_) | | | (_) |"
 echo " |_____/|_| |_|\__,_|\__,_| /_/\_\ |_____/|_|  \___\__,_|___(_) .__/|_|  \___/ "
 echo "                                                              | |              "
-echo " Shadoweee x SRCDS.pro | V1.0                                 |_|              "
+echo " Shadoweee x SRCDS.pro 4.1 | V1.1                             |_|              "
 echo "■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■"
 echo " "
 echo "┌────────────────────────────────────────────────────────────────────────────┐"
@@ -55,11 +55,11 @@ echo "| Type MIX,        to mix up the teams                                    
 echo "| Type SWAP,       to swap sides of teams [ CT <-> T ]                       |"
 echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
 echo "| Type:                                                                      |"
-echo "|      └─ RR,     to restart the game  1 time                                |"
-echo "|      └─ RR3,    to restart the after 3 seconds                             |"
-echo "|      └─ LO3,    to restart the game  3 times and start the match           |"
+echo "|      └─ RR,     to restart the game    1 time                              |"
+echo "|      └─ RR3,    to restart the game in 3 seconds                           |"
+echo "|      └─ LO3,    to restart the game    3 times and start the match         |"
 echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
-echo "| Type 5v5                                                                   |"
+echo "| Type 5v5                                            [  TYPE: ]             |"
 echo "|        └─ ESL,  to load Esl's           5v5 config  [ 5v5ESL ]             |"
 echo "|        └─ CSG,  to load CSGames'        5v5 config  [ 5v5CSG ]             |"
 echo "|        └─ FEC,  to load Fantasy Expo's  5v5 config  [ 5v5FEC ]             |"
