--- a/cfg/ShadREC/ShadRECagr.cfg
+++ b/cfg/ShadREC/ShadRECagr.cfg
@@ -9,7 +9,7 @@ bind "Mouse1" "+attack"
 bind "Mouse2" "+attack2"
 
 //Back
-alias "back" "exec BindCleaner.cfg; exec shadrec/shadreclauncher.cfg"
+alias "back" "exec shadrec/shadrecagrCleaner.cfg; exec shadrec/shadreclauncher.cfg"
 
 //IgnoreAliasesFromLauncher
 alias "demall" ""
