--- a/cfg/ShadREC/ShadREClauncher.cfg
+++ b/cfg/ShadREC/ShadREClauncher.cfg
@@ -2,7 +2,7 @@
 alias "demall" "exec ShadREC/ShadREClauncherCleaner.cfg; exec ShadREC/ShadRECdemALLCleaner.cfg; exec ShadREC/shadrecdemall.cfg"
 alias "dempov" "exec ShadREC/ShadREClauncherCleaner.cfg; exec ShadREC/ShadRECdemPOVCleaner.cfg; exec ShadREC/shadrecdempov.cfg"
 alias "agr" "exec ShadREC/ShadREClauncherCleaner.cfg; exec BindCleaner.cfg; exec ShadREC/shadrecagr.cfg"
-alias "back" "exec ShadREC/ShadREClauncherCleaner.cfg; exec BindCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec ShadREC/ShadREClauncherCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 
 //GUI
 clear
@@ -31,7 +31,7 @@ echo "[.dem] This mode records information into files that can be read by CS:GO.
 echo "[.agr] This mode records information into files that can be read by 3D Software."
 echo "[ALL]  This mode records EVERY single player on the server."
 echo "[POV]  This mode records only YOUR'S Point Of View."
-echo "[HLAE] This mode requires Half Life Advanced Effects App | www.advancedfx.org."
+echo "[HLAE] This mode requires Half Life Advanced Effects App | www.advancedfx.org"
 echo ""
 echo ""
 echo ""
