--- a/cfg/Shadoweee/Bleed.cfg
+++ b/cfg/Shadoweee/Bleed.cfg
@@ -461,7 +461,7 @@ cl_updaterate "128"
 rate "128000"
 
 //Password
-password "eloleszcze"
+password ""
 
 //CustomAlias
 alias "fps" "rcon"
@@ -472,7 +472,7 @@ alias "3" "mat_monitorgamma 2.3"
 alias "4" "mat_setvideomode 1680 1050 0"
 alias "5" "mat_setvideomode 1280 960 0"
 alias "trng" "exec Shadoweee/BleedTraining.cfg"
-alias "back" "exec Shadoweee/BleedCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec Shadoweee/BleedCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 
 
 //klasyczny modul ladowania Shadoweee
@@ -485,7 +485,7 @@ echo " | |_) | | ___  ___  __| |"
 echo " |  _ <| |/ _ \/ _ \/ _` |"
 echo " | |_) | |  __/  __/ (_| |"
 echo " |____/|_|\___|\___|\__,_|"
-echo "     Co jest kołpaki?     "
+echo "     Co jest kolpaki?     "
 echo "┌──────────────────────────────────────────────────────┐"
 echo "|           Pomyslnie zaladowano exec Bleed.           |"
 echo "└──────────────────────────────────────────────────────┘"
@@ -503,5 +503,5 @@ echo "| Wpisz back, aby powrocic do wyboru configu           |"
 echo "└──────────────────────────────────────────────────────┘"
 echo " "
 echo "┌──────────────────────────────────────────────────────┐"
-echo "| Exec made by Shadoweee | Version 1.0 @ 02.02.2020    |"
+echo "| Exec made by Shadoweee | Version 1.1 @ 29.02.2020    |"
 echo "└──────────────────────────────────────────────────────┘"
