--- a/cfg/Shadoweee/MaarekL2020.cfg
+++ b/cfg/Shadoweee/MaarekL2020.cfg
@@ -537,7 +537,7 @@ cl_updaterate "128"
 rate "128000"
 
 //Password
-password "eloleszcze"
+password ""
 
 //CustomAlias
 alias "fps" "rcon"
@@ -548,7 +548,7 @@ alias "3" "mat_monitorgamma 2.3"
 alias "4" "mat_setvideomode 1440 1080 0"
 alias "5" "mat_setvideomode 1280 960 0"
 alias "6" "mat_setvideomode 2560 1440 0"
-alias "back" "exec Shadoweee/MaarekL2020Cleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec Shadoweee/MaarekL2020Cleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 
 
 //klasyczny modul ladowania Shadoweee
@@ -581,5 +581,5 @@ echo "| Wpisz back, aby powrocic do wyboru configu           |"
 echo "└──────────────────────────────────────────────────────┘"
 echo " "
 echo "┌──────────────────────────────────────────────────────┐"
-echo "| Exec made by Shadoweee | Version 1.0 @ 02.02.2020    |"
+echo "| Exec made by Shadoweee | Version 1.1 @ 29.02.2020    |"
 echo "└──────────────────────────────────────────────────────┘"
