--- a/cfg/Shadoweee/shadooo.cfg
+++ b/cfg/Shadoweee/shadooo.cfg
@@ -17,7 +17,7 @@ bind "e" "+use"
 bind "f" "toggle cl_righthand 0 1"
 bind "g" "drop"
 bind "h" "commandmenu"
-bind "i" "showbriefing"
+bind "i" "rcon_adress 1"
 bind "j" "toggle bot_crouch 0 1"
 bind "l" "toggle bot_mimic 0 1"
 bind "m" "+csmoke"
@@ -125,7 +125,8 @@ cl_bobamt_lat 0.33;
 cl_bobamt_vert 0.14;
 cl_bobcycle 0.98;
 
-
+cl_buywheel_nomousecentering "1"
+cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
 cl_clanid "32936634"
@@ -301,7 +302,7 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "Shadoweee"
+password ""
 play_distance "1"
 player_botdifflast_s "2"
 player_nevershow_communityservermessage "0"
@@ -452,7 +453,7 @@ alias "4" "mat_setvideomode 1600 1200 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "6" "mat_setvideomode 1280 960 0"
 alias "7" "mat_setvideomode 1920 1000 0"
-alias "back" "exec Shadoweee/shadoooCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec Shadoweee/shadoooCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 alias "+jumpthrow" "+jump;-attack"
 alias "-jumpthrow" "-jump"
 bind alt "+jumpthrow"
