--- a/cfg/Shadoweee/shadstary.cfg
+++ b/cfg/Shadoweee/shadstary.cfg
@@ -109,7 +109,7 @@ net_steamcnx_allowrelay "1"
 cl_updaterate "64.000000"
 
 //Misc
-password "Shadoweee"
+password ""
 rate "786432"
 mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "43"
@@ -235,7 +235,7 @@ alias "4" "mat_setvideomode 1024 768 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "fps" "r_drawparticles 0; muzzleflash_light 0; r_eyemove 0; r_eyegloss 0; func_break_max_pieces 0; mat_disable_bloom 1"
 alias "normal" "r_drawparticles 1; muzzleflash_light 1; r_eyemove 1; r_eyegloss 1; func_break_max_pieces 15; mat_disable_bloom 0"
-alias "back" "exec Shadoweee/shadstaryCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec Shadoweee/shadstaryCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 
 //klasyczny modul ladowania
 
