--- a/cfg/Shadoweee/shadtrolling.cfg
+++ b/cfg/Shadoweee/shadtrolling.cfg
@@ -231,7 +231,7 @@ alias "4" "mat_setvideomode 1024 768 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "6" "mat_setvideomode 1920 1080 0"
 alias "7" "mat_setvideomode 2560 1440 0"
-alias "back" "Shadoweee/shadtrollingCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "Shadoweee/shadtrollingCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 alias "r" "ignorerad"
 alias "s" "toggle voice_loopback 0 1"
 alias "slam" "exec slam; clear; la"
