--- a/cfg/shadlauncher.cfg
+++ b/cfg/shadlauncher.cfg
@@ -14,13 +14,13 @@ bind "Mouse2" "+attack2"
 //launcher
 
 //Shadoweee
-alias "1" "exec Shadoweee/shadpanoramaCleaner.cfg; exec Shadoweee/shadpanorama.cfg"
-alias "2" "exec Shadoweee/shadstaryCleaner.cfg; exec Shadoweee/shadstary.cfg"
-alias "3" "exec Shadoweee/shadtrollingCleaner.cfg; exec Shadoweee/shadtrolling.cfg"
-alias "4" "exec Shadoweee/shadoooCleaner.cfg; exec Shadoweee/shadooo.cfg"
-alias "5" "exec Shadoweee/KeniqCleaner.cfg; exec Shadoweee/keniq.cfg"
-alias "6" "exec Shadoweee/MaarekL2020Cleaner.cfg; exec Shadoweee/MaarekL2020.cfg"
-alias "7" "exec Shadoweee/BleedCleaner.cfg; exec Shadoweee/Bleed.cfg"
+alias "1" "exec shadlauncherCleaner.cfg; exec Shadoweee/shadpanoramaCleaner.cfg; exec Shadoweee/shadpanorama.cfg"
+alias "2" "exec shadlauncherCleaner.cfg; exec Shadoweee/shadstaryCleaner.cfg; exec Shadoweee/shadstary.cfg"
+alias "3" "exec shadlauncherCleaner.cfg; exec Shadoweee/shadtrollingCleaner.cfg; exec Shadoweee/shadtrolling.cfg"
+alias "4" "exec shadlauncherCleaner.cfg; exec Shadoweee/shadoooCleaner.cfg; exec Shadoweee/shadooo.cfg"
+alias "5" "exec shadlauncherCleaner.cfg; exec Shadoweee/KeniqCleaner.cfg; exec Shadoweee/keniq.cfg"
+alias "6" "exec shadlauncherCleaner.cfg; exec Shadoweee/MaarekL2020Cleaner.cfg; exec Shadoweee/MaarekL2020.cfg"
+alias "7" "exec shadlauncherCleaner.cfg; exec Shadoweee/BleedCleaner.cfg; exec Shadoweee/Bleed.cfg"
 
 //Needs reworking
 alias "vid" "exec BindCleaner.cfg; exec Shadoweee/avidiots.cfg"
@@ -28,18 +28,18 @@ alias "trening" "exec BindCleaner.cfg; exec Shadoweee/shadsmokes.cfg"
 
 
 //ServerOperator
-alias "server" "exec ServerOperator/serveroperatorlauncherCleaner; exec ServerOperator/serveroperatorlauncher"
+alias "server" "exec shadlauncherCleaner.cfg; exec ServerOperator/serveroperatorlauncherCleaner; exec ServerOperator/serveroperatorlauncher"
 
 //ShadREC
-alias "rec" "exec BindCleaner.cfg; exec ShadREC/CleanerREC.cfg"
+alias "rec" "exec shadlauncherCleaner.cfg; exec ShadREC/ShadREClauncherCleaner.cfg; exec ShadREC/ShadREClauncher.cfg"
 
 //HiddenEvents
-alias "dev" "mat_setvideomode 1000 1000 1; exec shadlauncher.cfg"
-alias "back" "exec BindCleaner.cfg; exec shadlauncher.cfg"
+alias "dev" "mat_setvideomode 1000 1000 1; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 
 //TRENING do przerobienia
 
-// alias "wartość do wpisania w konsoli" "exec Shadoweee = Folder / shadooo = config  .cfg"
+// alias "value inserted into console" "exec Shadoweee = Folder / shadooo = config  .cfg"
 
 
 //GUI
