--- a/cfg/Shadoweee/shadpanorama.cfg
+++ b/cfg/Shadoweee/shadpanorama.cfg
@@ -468,7 +468,7 @@ alias "4" "mat_setvideomode 1024 768 0"
 alias "5" "mat_setvideomode 1336 768 0"
 alias "6" "mat_setvideomode 1280 960 0"
 alias "7" "mat_setvideomode 1920 1000 0"
-alias "back" "exec Shadoweee/shadpanoramaCleaner.cfg; exec shadlauncher.cfg"
+alias "back" "exec Shadoweee/shadpanoramaCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
 
 alias "dot" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthickness 1.5; cl_crosshairgap 5000; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshaircolor_b 0"
 
