--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -41,8 +41,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1530967308"
-cachedvalue_count_teammates "1530967320"
+cachedvalue_count_partybrowser "1583014149"
+cachedvalue_count_teammates "1583014158"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -61,36 +61,37 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_autohelp "1"
 cl_autowepswitch "0"
-cl_bob_lower_amt "5"
+cl_bob_lower_amt "21"
 cl_bobamt_lat "0.33"
 cl_bobamt_vert "0.14"
 cl_bobcycle "0.98"
+cl_buywheel_nomousecentering "1"
+cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
 cl_clanid "32936634"
-cl_cmdrate "128.000000"
+cl_cmdrate "128"
 cl_color "1"
 cl_compass_enabled "1"
-cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "0"
+cl_crosshair_drawoutline "1"
+cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.300000"
-cl_crosshair_dynamic_splitdist "5"
-cl_crosshair_friendly_warning "0"
-cl_crosshair_outlinethickness "1.500000"
+cl_crosshair_dynamic_splitalpha_outermod "0.5"
+cl_crosshair_dynamic_splitdist "7"
+cl_crosshair_friendly_warning "1"
+cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
+cl_crosshair_sniper_width "3"
 cl_crosshair_t "0"
-cl_crosshairalpha "250"
-cl_crosshaircolor "1"
-cl_crosshaircolor_b "-1000"
+cl_crosshairalpha "255"
+cl_crosshaircolor "4"
+cl_crosshaircolor_b "0.000000"
 cl_crosshaircolor_g "0"
-cl_crosshaircolor_r "-1000"
+cl_crosshaircolor_r "0.000000"
 cl_crosshairdot "0"
-cl_crosshairgap "-3"
+cl_crosshairgap "-2"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairscale "0"
-cl_crosshairsize "2"
+cl_crosshairsize "2.500000"
 cl_crosshairstyle "4"
 cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
@@ -105,15 +106,15 @@ cl_dm_buyrandomweapons "1"
 cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
-cl_embedded_stream_audio_volume_xmaster "0.6"
-cl_fixedcrosshairgap "0"
+cl_embedded_stream_audio_volume_xmaster "1"
+cl_fixedcrosshairgap "3"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images "0"
 cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "1"
-cl_hud_color "5"
+cl_hud_color "0"
 cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
@@ -137,16 +138,15 @@ cl_promoted_settings_acknowledged "1:1574620948091"
 cl_quickinventory_lastinv "0"
 cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "0"
-cl_radar_icon_scale_min "1"
+cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
-cl_radar_scale "0.5"
+cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "1"
 cl_radial_radio_tab "0"
 cl_radialmenu_deadzone_size "0.04"
-cl_righthand "0"
+cl_righthand "1"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
-cl_scalecrosshair "1"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "0"
@@ -155,14 +155,14 @@ cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "5"
+cl_spec_mode "0"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
-cl_teammate_colors_show "2"
+cl_teammate_colors_show "1"
 cl_thirdperson "0"
 cl_timeout "30"
-cl_updaterate "64.000000"
-cl_use_opens_buy_menu "0"
+cl_updaterate "128"
+cl_use_opens_buy_menu "1"
 cl_versus_intro "1"
 cl_viewmodel_shift_left_amt "1.5"
 cl_viewmodel_shift_right_amt "0.75"
@@ -248,7 +248,7 @@ m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "1.6"
+mat_monitorgamma "2.2"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
@@ -259,18 +259,18 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
-mm_dedicated_search_maxping "43"
+mm_dedicated_search_maxping "54.855171"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "✪ Blet gejmink"
+name "Magister Kantera𐂃𐂃"
 net_allow_multicast "1"
 net_graph "1"
 net_graphheight "64"
 net_graphholdsvframerate "0"
 net_graphipc "0"
 net_graphmsecs "400"
-net_graphpos "3"
-net_graphproportionalfont "0.9"
+net_graphpos "1"
+net_graphproportionalfont "0"
 net_graphshowinterp "1"
 net_graphshowlatency "1"
 net_graphshowsvframerate "0"
@@ -282,11 +282,10 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "eloleszcze"
 play_distance "1"
 player_botdifflast_s "2"
 player_competitive_maplist_2v2_8_1_E8907D2E "mg_de_shortdust"
-player_competitive_maplist_8_8_1_475B5511 "mg_de_mirage,mg_de_inferno,mg_de_nuke,mg_de_train"
+player_competitive_maplist_8_8_1_475B5511 "mg_de_overpass"
 player_nevershow_communityservermessage "0"
 player_survival_list_8_1_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
 player_teamplayedlast "3"
@@ -311,10 +310,10 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.97"
+sensitivity "3"
 sk_autoaim_mode "1"
 skill "1"
-snd_deathcamera_volume "0.000000"
+snd_deathcamera_volume "0.3"
 snd_duckerattacktime "0.5"
 snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
@@ -333,13 +332,13 @@ snd_music_selection "1"
 snd_music_volume_onetime_reset_2 "1"
 snd_musicvolume_multiplier_inoverlay "0.200000"
 snd_mute_losefocus "1"
-snd_mute_mvp_music_live_players "0"
-snd_mvp_volume "0.061973"
+snd_mute_mvp_music_live_players "1"
+snd_mvp_volume "0.241561"
 snd_pitchquality "1"
 snd_roundend_volume "0.023003"
 snd_roundstart_volume "0.021873"
 snd_surround_speakers "0"
-snd_tensecondwarning_volume "0.015712"
+snd_tensecondwarning_volume "0.121502"
 sound_device_override "{0.0.0.00000000}.{8c4004d7-88d1-48f1-b12b-32acd174d57f}"
 spec_replay_autostart "0"
 spec_show_xray "0"
@@ -377,8 +376,8 @@ tr_completed_training "0"
 triple_monitor_mode "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_nearbylobbies_filter2 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/02/28450/"
+ui_nearbylobbies_filter2 "cooperative"
+ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/02/28721/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
@@ -388,8 +387,8 @@ ui_playsettings_maps_official_casual "mg_casualdelta"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
 ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
-ui_playsettings_mode_official_v20 "survival"
-ui_playsettings_survival_solo "1"
+ui_playsettings_mode_official_v20 "casual"
+ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "1"
 ui_setting_advertiseforhire_auto "1"
@@ -400,11 +399,11 @@ ui_vanitysetting_loadoutslot_t "rifle4"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
 viewmodel_fov "68"
-viewmodel_offset_x "2.5"
+viewmodel_offset_x "2.500000"
 viewmodel_offset_y "0"
-viewmodel_offset_z "-1"
-viewmodel_presetpos "0"
-viewmodel_recoil "1"
+viewmodel_offset_z "-1.500000"
+viewmodel_presetpos "3"
+viewmodel_recoil "0"
 voice_caster_enable "0"
 voice_caster_scale "1.000000"
 voice_enable "1"
@@ -417,7 +416,7 @@ voice_positional "0"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.600000"
+volume "1"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
@@ -428,5 +427,5 @@ xbox_autothrottle "1"
 xbox_throttlebias "100"
 xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
-zoom_sensitivity_ratio_mouse "0.818933027098955175"
+zoom_sensitivity_ratio_mouse "1.1"
 cmd1 +jlook
