--- a/cfg/serveroperatorlogindata.cfg
+++ b/cfg/serveroperatorlogindata.cfg
@@ -1,3 +1,3 @@
-password "eloleszcze"
-rcon_adress "54.38.134.243:27015"
-rcon_password "i1cxz71"
+password "REPLACE_WITH_CORRECT_VALUE"
+rcon_adress "REPLACE_WITH_CORRECT_VALUE"
+rcon_password "REPLACE_WITH_CORRECT_VALUE"
