--- a/cfg/Shadoweee/ShadCfgLauncher.cfg
+++ b/cfg/Shadoweee/ShadCfgLauncher.cfg
@@ -21,6 +21,7 @@ alias "6" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/MaarekL2020
 alias "7" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/BleedCleaner.cfg; exec Shadoweee/Bleed.cfg"
 alias "8" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/DevoCleaner.cfg; exec Shadoweee/Devo.cfg"
 alias "9" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/AdamJNCleaner.cfg; exec Shadoweee/AdamJN.cfg"
+alias "10" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/wojmajCleaner.cfg; exec Shadoweee/wojmaj.cfg"
 
 //HiddenEvents
 alias "back" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
@@ -49,6 +50,7 @@ echo "| Type 6,       to run Maarek                        |"
 echo "| Type 7,       to run Bleed                         |"
 echo "| Type 8,       to run Devostated                    |"
 echo "| Type 9,       to run AdamJN                        |"
+echo "| Type 10,      to run Wojmaj22                      |"
 echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
 echo "| Type back,    to go back to shadlauncher           |"
 echo "└────────────────────────────────────────────────────┘"
