--- a/cfg/ServerOperator/serveroperatorlauncher.cfg
+++ b/cfg/ServerOperator/serveroperatorlauncher.cfg
@@ -12,7 +12,7 @@ alias "mix" "rcon scramble"
 alias "swap" "rcon swap"
 
 //MenuBox
-alias "CON" "connect 54.38.134.243:27015; password eloleszcze"
+alias "CON" "say GO TO LOGIN FIRST!"
 alias "5v5" "rcon exec esl5on5.cfg"
 alias "prac" "rcon exec practice.cfg"
 alias "players" "rcon users"
