--- a/cfg/config.cfg
+++ b/cfg/config.cfg
@@ -1,12 +1,68 @@
 unbindall
+bind "0" "slot10; cl_righthand 1"
+bind "1" "slot1; cl_righthand 1"
+bind "2" "slot2; cl_righthand 1"
+bind "3" "slot3; cl_righthand 0"
+bind "4" "slot4; cl_righthand 1"
+bind "5" "slot5; cl_righthand 1"
+bind "6" "slot6; cl_righthand 1"
+bind "7" "slot7; cl_righthand 1"
+bind "8" "slot8; cl_righthand 1"
+bind "9" "slot9; cl_righthand 1"
 bind "a" "+moveleft"
+bind "b" "buymenu"
+bind "c" "radio3"
 bind "d" "+moveright"
+bind "e" "+use"
+bind "f" "toggle cl_righthand 0 1"
+bind "g" "drop"
+bind "h" "commandmenu"
+bind "i" "rcon_adress 1"
+bind "j" "toggle bot_crouch 0 1"
+bind "l" "toggle bot_mimic 0 1"
+bind "m" "+csmoke"
+bind "n" "nightvision"
+bind "o" "buyequip"
+bind "q" "+switch"
+bind "r" "+reload; r_cleardecals"
 bind "s" "+back"
+bind "t" "+spray_menu"
+bind "u" "messagemode2"
+bind "v" "+lookatweapon"
 bind "w" "+forward"
+bind "x" "radio2"
+bind "y" "messagemode"
+bind "z" "radio1"
+bind "]" "invnext"
+bind "'" "+moveup"
 bind "`" "toggleconsole"
+bind "," "buy primammo"
+bind "." "buy secammo"
+bind "/" "+movedown"
+bind "-" "sizedown"
+bind "=" "sizeup"
+bind "SPACE" "+hjump"
+bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
+bind "INS" "+klook"
+bind "END" "centerview"
+bind "PGUP" "+lookup"
+bind "PGDN" "+lookdown"
+bind "PAUSE" "pause"
+bind "SHIFT" "+speed;r_cleardecals"
+bind "ALT" "+jumpthrow"
+bind "CTRL" "+duck;r_cleardecals"
+bind "LEFTARROW" "+left"
+bind "RIGHTARROW" "+right"
+bind "F2" "askconnect_accept"
+bind "F3" "autobuy"
+bind "F4" "rebuy"
+bind "F5" "jpeg"
+bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
+bind "MWHEELUP" "+jump"
+bind "MWHEELDOWN" "+jump"
 @panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
@@ -41,8 +97,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1588846860"
-cachedvalue_count_teammates "1588850444"
+cachedvalue_count_partybrowser "1530967308"
+cachedvalue_count_teammates "1530967320"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -61,39 +117,39 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_autohelp "1"
 cl_autowepswitch "0"
-cl_bob_lower_amt "21"
+cl_bob_lower_amt "5"
 cl_bobamt_lat "0.33"
 cl_bobamt_vert "0.14"
 cl_bobcycle "0.98"
-cl_buywheel_nomousecentering "0"
+cl_buywheel_nomousecentering "1"
 cl_buywheel_nonumberpurchasing "0"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "0"
+cl_clanid "32936634"
 cl_cmdrate "128.000000"
 cl_color "1"
 cl_compass_enabled "1"
 cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "0"
+cl_crosshair_dynamic_maxdist_splitratio "1.000000"
 cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "1.000000"
-cl_crosshair_dynamic_splitdist "5"
+cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "0.100000"
+cl_crosshair_outlinethickness "0"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
-cl_crosshairalpha "200"
-cl_crosshaircolor "5"
+cl_crosshairalpha "250"
+cl_crosshaircolor "1"
 cl_crosshaircolor_b "0"
 cl_crosshaircolor_g "255"
 cl_crosshaircolor_r "0"
-cl_crosshairdot "0"
-cl_crosshairgap "-2"
+cl_crosshairdot "1"
+cl_crosshairgap "5000"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "3"
+cl_crosshairsize "2"
 cl_crosshairstyle "4"
-cl_crosshairthickness "0.5"
+cl_crosshairthickness "1.5"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
@@ -102,25 +158,26 @@ cl_detail_avoid_recover_speed "0.25"
 cl_detail_max_sway "5"
 cl_disablefreezecam "0"
 cl_disablehtmlmotd "0"
-cl_dm_buyrandomweapons "0"
+cl_dm_buyrandomweapons "1"
 cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
-cl_embedded_stream_audio_volume "0"
-cl_embedded_stream_audio_volume_xmaster "0"
-cl_fixedcrosshairgap "3"
+cl_embedded_stream_audio_volume "60"
+cl_embedded_stream_audio_volume_xmaster "0.6"
+cl_filtertext_enabled "0"
+cl_fixedcrosshairgap "0"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images ""
 cl_hud_background_alpha "0.5"
-cl_hud_bomb_under_radar "0"
-cl_hud_color "2"
+cl_hud_bomb_under_radar "1"
+cl_hud_color "5"
 cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
-cl_hud_radar_scale "1.130790"
+cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
-cl_inventory_saved_filter2 "all,not_defaultequipped"
+cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_rarity"
 cl_invites_only_friends "0"
 cl_invites_only_mainmenu "0"
@@ -130,26 +187,26 @@ cl_minimal_rtt_shadows "1"
 cl_mouselook "1"
 cl_mute_all_but_friends_and_party "0"
 cl_mute_enemy_team "0"
-cl_obs_interp_enable "1"
+cl_obs_interp_enable "0"
 cl_observercrosshair "1"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
-cl_promoted_settings_acknowledged "1:1587484097641"
+cl_promoted_settings_acknowledged "1:1592248101669"
 cl_quickinventory_lastinv "1"
 cl_quickinventory_line_update_speed "65.0f"
-cl_radar_always_centered "1"
-cl_radar_icon_scale_min "0.6"
+cl_radar_always_centered "0"
+cl_radar_icon_scale_min "1"
 cl_radar_rotate "1"
-cl_radar_scale "0.429982"
+cl_radar_scale "0.5"
 cl_radar_square_with_scoreboard "1"
 cl_radial_radio_tab "0"
 cl_radialmenu_deadzone_size "0.04"
-cl_righthand "1"
+cl_righthand "0"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
-cl_show_clan_in_death_notice "1"
+cl_show_clan_in_death_notice "0"
 cl_show_observer_crosshair "2"
 cl_showhelp "1"
 cl_showloadout "1"
@@ -159,10 +216,10 @@ cl_spec_follow_grenade_key "0"
 cl_spec_mode "5"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
-cl_teammate_colors_show "1"
+cl_teammate_colors_show "2"
 cl_thirdperson "0"
 cl_timeout "30"
-cl_updaterate "128"
+cl_updaterate "64.000000"
 cl_use_opens_buy_menu "0"
 cl_versus_intro "1"
 cl_viewmodel_shift_left_amt "1.5"
@@ -170,6 +227,7 @@ cl_viewmodel_shift_right_amt "0.75"
 closecaption "0"
 closeonbuy "0"
 commentary_firstrun "0"
+con_allownotify "1"
 con_enable "1"
 crosshair "1"
 dsp_enhance_stereo "0"
@@ -178,7 +236,7 @@ force_audio_english "0"
 func_break_max_pieces "15"
 g15_update_msec "250"
 gameinstructor_enable "0"
-hud_scaling "0.833000"
+hud_scaling "0.85"
 hud_showtargetid "1"
 hud_takesshots "0"
 joy_accelmax "1.0"
@@ -249,7 +307,7 @@ m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "1.690000"
+mat_monitorgamma "1.6"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
@@ -260,18 +318,18 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
-mm_dedicated_search_maxping "98.000000"
+mm_dedicated_search_maxping "43"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
 name "༄Magister Kantera"
 net_allow_multicast "1"
-net_graph "0"
-net_graphheight "64"
+net_graph "1"
+net_graphheight "48"
 net_graphholdsvframerate "0"
 net_graphipc "0"
 net_graphmsecs "400"
-net_graphpos "1"
-net_graphproportionalfont "1"
+net_graphpos "3"
+net_graphproportionalfont "0.9"
 net_graphshowinterp "1"
 net_graphshowlatency "1"
 net_graphshowsvframerate "0"
@@ -283,14 +341,14 @@ net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
 option_duck_method "0"
 option_speed_method "0"
-password "fnc"
+password "Shadoweee"
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
+player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_inferno"
 player_competitive_maplist_8_8_0_1B1D6577 "mg_de_mirage"
-player_nevershow_communityservermessage "1"
+player_nevershow_communityservermessage "0"
 player_survival_list_8_0_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
-player_teamplayedlast "3"
+player_teamplayedlast "2"
 player_wargames_list2_8_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
@@ -301,9 +359,10 @@ r_eyeshift_x "0"
 r_eyeshift_y "0"
 r_eyeshift_z "0"
 r_eyesize "0"
-rate "786432.000000"
-safezonex "1.0"
-safezoney "1.0"
+r_player_visibility_mode "1"
+rate "786432"
+safezonex "1.000000"
+safezoney "1.000000"
 sc_enable "1.0"
 sc_joystick_map "1"
 sc_pitch_sensitivity "1.0"
@@ -312,9 +371,9 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "1.8"
+sensitivity "1.97"
 sk_autoaim_mode "1"
-skill "1.000000"
+skill "1"
 snd_deathcamera_volume "0.000000"
 snd_duckerattacktime "0.5"
 snd_duckerreleasetime "2.5"
@@ -325,30 +384,30 @@ snd_dzmusic_volume "0.2"
 snd_hrtf_distance_behind "100"
 snd_hrtf_voice_delay "0.1"
 snd_hwcompat "0"
-snd_mapobjective_volume "0.000000"
+snd_mapobjective_volume "0.019751"
 snd_menumusic_volume "0.000000"
 snd_mix_async "1"
 snd_mix_async_onetime_reset "1"
-snd_mixahead "0.025"
-snd_music_selection "1"
+snd_mixahead "0.05"
+snd_music_selection "2"
 snd_music_volume_onetime_reset_2 "1"
-snd_musicvolume_multiplier_inoverlay "0.000000"
+snd_musicvolume_multiplier_inoverlay "0.200000"
 snd_mute_losefocus "1"
 snd_mute_mvp_music_live_players "0"
-snd_mvp_volume "0.000000"
+snd_mvp_volume "0.061973"
 snd_pitchquality "1"
-snd_roundend_volume "0.000000"
-snd_roundstart_volume "0.000000"
+snd_roundend_volume "0.023003"
+snd_roundstart_volume "0.021873"
 snd_surround_speakers "0"
-snd_tensecondwarning_volume "0.000000"
+snd_tensecondwarning_volume "0.015712"
 sound_device_override "{0.0.0.00000000}.{8c4004d7-88d1-48f1-b12b-32acd174d57f}"
-spec_replay_autostart "1"
-spec_show_xray "1"
+spec_replay_autostart "0"
+spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
 store_version "1"
 suitvolume "0.25"
-sv_forcepreload "1"
+sv_forcepreload "0"
 sv_log_onefile "0"
 sv_logbans "0"
 sv_logecho "1"
@@ -358,7 +417,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_dust"
+sv_skyname "sky_cs15_daylight03_hdr"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -374,20 +433,21 @@ texture_budget_panel_y "450"
 tr_best_course_time "0"
 tr_completed_training "0"
 triple_monitor_mode "0"
-tv_nochat "1"
+tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
+ui_mainmenu_bkgnd_movie1 "anubis"
 ui_nearbylobbies_filter3 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/04/29701/"
+ui_news_last_read_link "https://blog.counter-strike.net/index.php/2020/06/30428/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
 ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
-ui_playsettings_maps_official_casual "mg_casualsigma"
+ui_playsettings_maps_official_casual "mg_casualdelta"
 ui_playsettings_maps_official_deathmatch "mg_casualsigma"
-ui_playsettings_maps_workshop "@workshop/243702660/aim_botz"
+ui_playsettings_maps_workshop ""
 ui_playsettings_mode_listen "casual"
-ui_playsettings_mode_official_v20 "competitive"
+ui_playsettings_mode_official_v20 "scrimcomp2v2"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
 ui_popup_weaponupdate_version "1"
@@ -395,15 +455,15 @@ ui_setting_advertiseforhire_auto "1"
 ui_setting_advertiseforhire_auto_last "/survival"
 ui_steam_overlay_notification_position "bottomright"
 ui_vanitysetting_loadoutslot_ct "melee"
-ui_vanitysetting_loadoutslot_t "melee"
+ui_vanitysetting_loadoutslot_t "secondary0"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
 viewmodel_fov "68"
-viewmodel_offset_x "2.500000"
+viewmodel_offset_x "2.5"
 viewmodel_offset_y "0"
-viewmodel_offset_z "-1.500000"
-viewmodel_presetpos "3"
-viewmodel_recoil "0"
+viewmodel_offset_z "-1"
+viewmodel_presetpos "0"
+viewmodel_recoil "1"
 voice_caster_enable "0"
 voice_caster_scale "1.000000"
 voice_enable "1"
@@ -413,10 +473,10 @@ voice_mixer_mute "0"
 voice_mixer_volume "1.0"
 voice_modenable "1"
 voice_positional "0"
-voice_scale "0.3"
+voice_scale "1.0"
 voice_system_enable "1"
-voice_threshold "2000"
-volume "0.1"
+voice_threshold "4000"
+volume "0.3"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
@@ -427,5 +487,5 @@ xbox_autothrottle "1"
 xbox_throttlebias "100"
 xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
-zoom_sensitivity_ratio_mouse "1.000000"
+zoom_sensitivity_ratio_mouse "0.818933027098955175"
 cmd1 +jlook
