--- a/cfg/Shadoweee/ShadCfgLauncher.cfg
+++ b/cfg/Shadoweee/ShadCfgLauncher.cfg
@@ -22,6 +22,7 @@ alias "7" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/BleedCleane
 alias "8" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/DevoCleaner.cfg; exec Shadoweee/Devo.cfg"
 alias "9" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/AdamJNCleaner.cfg; exec Shadoweee/AdamJN.cfg"
 alias "10" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/wojmajCleaner.cfg; exec Shadoweee/wojmaj.cfg"
+alias "11" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec Shadoweee/cienkiCleaner.cfg; exec Shadoweee/cienki.cfg"
 
 //HiddenEvents
 alias "back" "exec Shadoweee/ShadCfgLauncherCleaner.cfg; exec shadlauncherCleaner.cfg; exec shadlauncher.cfg"
@@ -51,6 +52,7 @@ echo "| Type 7,       to run Bleed                         |"
 echo "| Type 8,       to run Devostated                    |"
 echo "| Type 9,       to run AdamJN                        |"
 echo "| Type 10,      to run Wojmaj22                      |"
+echo "| Type 11,      to run Tiger1                        |"
 echo "|■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■|"
 echo "| Type back,    to go back to shadlauncher           |"
 echo "└────────────────────────────────────────────────────┘"
