--- a/cfg/Shadoweee/cienki.cfg
+++ b/cfg/Shadoweee/cienki.cfg
@@ -12,7 +12,6 @@ bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "buymenu"
 bind "d" "+moveright"
-bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
 bind "i" "show_loadout_toggle"
@@ -23,20 +22,18 @@ bind "s" "+back"
 bind "t" "+spray_menu"
 bind "u" "messagemode2"
 bind "w" "+forward"
-bind "x" "-attack; -attack2"
+bind "x" "slot12"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "`" "toggleconsole"
-bind "," "buyammo1"
+bind "," "r_cleardecals"
 bind "." "buyammo2"
 bind "SPACE" "+jump"
-bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
 bind "DEL" "mute"
 bind "PAUSE" "pause"
 bind "SHIFT" "+speed"
 bind "CTRL" "+duck"
-bind "RCTRL" "+altbinds"
 bind "F3" "autobuy"
 bind "F4" "rebuy"
 bind "F5" "jpeg"
@@ -45,8 +42,7 @@ bind "F7" "load quick"
 bind "F10" "quit prompt"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
-bind "MOUSE3" "player_ping"
-bind "MOUSE4" "+voicerecord"
+bind "MOUSE3" "+jumpthrow"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
 @panorama_debug_overlay_opacity "0.8"
@@ -83,8 +79,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1592599558"
-cachedvalue_count_teammates "1592599818"
+cachedvalue_count_partybrowser "1592821763"
+cachedvalue_count_teammates "1592821765"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -109,7 +105,7 @@ cl_chatfilter_version "1"
 cl_chatfilters "63"
 cl_clanid "0"
 cl_cmdrate "64"
-cl_color "4"
+cl_color "0"
 cl_compass_enabled "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
@@ -123,19 +119,18 @@ cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
-cl_filtertext_enabled "0"
+cl_filtertext_enabled "1"
 cl_fixedcrosshairgap "3"
 cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
-cl_hide_avatar_images ""
+cl_hide_avatar_images "0"
 cl_hud_background_alpha "0.5"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "0"
 cl_hud_healthammo_style "0"
 cl_hud_playercount_pos "0"
 cl_hud_playercount_showcount "0"
-cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
@@ -151,29 +146,22 @@ cl_obs_interp_enable "1"
 cl_observercrosshair "1"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
-cl_promoted_settings_acknowledged "1:1591995621922"
-cl_quickinventory_lastinv "1"
+cl_promoted_settings_acknowledged "1:1590660342072"
+cl_quickinventory_lastinv "0"
 cl_quickinventory_line_update_speed "65.0f"
-cl_radar_always_centered "1"
-cl_radar_icon_scale_min "0.6"
-cl_radar_rotate "1"
-cl_radar_scale "0.7"
-cl_radar_square_with_scoreboard "1"
-cl_radial_radio_tab "0"
-cl_radialmenu_deadzone_size "0.04"
 cl_righthand "1"
 cl_rumblescale "1.0"
 cl_sanitize_player_names "0"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
-cl_show_observer_crosshair "2"
+cl_show_observer_crosshair "1"
 cl_showhelp "1"
-cl_showloadout "0"
+cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "5"
+cl_spec_mode "4"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
@@ -185,8 +173,6 @@ closecaption "0"
 closeonbuy "0"
 commentary_firstrun "0"
 con_allownotify "1"
-con_enable "1"
-crosshair "1"
 dsp_enhance_stereo "0"
 engine_no_focus_sleep "50"
 force_audio_english "0"
@@ -196,13 +182,12 @@ gameinstructor_enable "0"
 hud_scaling "0.85"
 hud_showtargetid "1"
 hud_takesshots "0"
-key_bind_version "5"
 lobby_default_privacy_bits2 "1"
 lockMoveControllerRet "0"
 lookspring "0"
 lookstrafe "0"
 mapoverview_icon_scale "1.0"
-mat_monitorgamma "2.2"
+mat_monitorgamma "1.857491"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 mat_queue_report "0"
@@ -213,24 +198,23 @@ mc_dead_zone_radius "0.06"
 mc_max_pitchrate "100.0"
 mc_max_yawrate "230.0"
 mm_csgo_community_search_players_min "3"
+mm_dedicated_search_maxping "300"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "wojmaj22 wojmaj22"
+name "Tygrys1"
 net_allow_multicast "1"
-net_scale "5"
-net_steamcnx_allowrelay "1"
 npc_height_adjust "1"
-option_duck_method "1"
-option_speed_method "1"
-password "wojmajKing"
+option_duck_method "0"
+option_speed_method "0"
+password ""
 play_distance "1"
-player_botdifflast_s "0.000000"
-player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_inferno,mg_de_overpass,mg_de_cbble"
-player_competitive_maplist_8_8_0_1B1D6577 "mg_de_vertigo"
+player_botdifflast_s "1"
+player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
+player_competitive_maplist_8_8_0_1B1D6577 "mg_de_mirage"
 player_nevershow_communityservermessage "0"
 player_survival_list_8_0_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
-player_teamplayedlast "2"
-player_wargames_list2_8_0_604 "mg_skirmish_armsrace,mg_skirmish_demolition"
+player_teamplayedlast "3"
+player_wargames_list2_8_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "1"
@@ -241,7 +225,7 @@ r_eyeshift_y "0"
 r_eyeshift_z "0"
 r_eyesize "0"
 r_player_visibility_mode "1"
-rate "196608"
+
 safezonex "1.0"
 safezoney "1.0"
 sc_enable "1.0"
@@ -252,38 +236,11 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "4.508170"
 sk_autoaim_mode "1"
 skill "1.000000"
-snd_deathcamera_volume "0.000000"
-snd_duckerattacktime "0.5"
-snd_duckerreleasetime "2.5"
-snd_duckerthreshold "0.15"
-snd_ducking_off "1"
-snd_ducktovolume "0.55"
-snd_dzmusic_volume "0.000000"
-snd_hrtf_distance_behind "100"
-snd_hrtf_voice_delay "0.1"
-snd_hwcompat "0"
-snd_mapobjective_volume "0.000000"
-snd_menumusic_volume "0.000000"
-snd_mix_async "1"
-snd_mix_async_onetime_reset "1"
-snd_mixahead "0.025"
-snd_music_selection "2"
-snd_music_volume_onetime_reset_2 "1"
-snd_musicvolume_multiplier_inoverlay "0.000000"
-snd_mute_losefocus "1"
-snd_mute_mvp_music_live_players "0"
-snd_mvp_volume "0.000000"
-snd_pitchquality "1"
-snd_roundend_volume "0.000000"
-snd_roundstart_volume "0.000000"
-snd_surround_speakers "-1"
-snd_tensecondwarning_volume "0.000000"
-sound_device_override ""
+sound_device_override "{0.0.0.00000000}.{5e63f82f-6f20-4a59-b72f-784af006ecb8}"
 spec_replay_autostart "1"
-spec_show_xray "1"
+spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
 ss_splitmode "0"
 store_version "1"
@@ -298,7 +255,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "sky_dust"
+sv_skyname "sky_cs15_daylight01_hdr"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -314,18 +271,18 @@ texture_budget_panel_y "450"
 triple_monitor_mode "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_mainmenu_bkgnd_movie1 "vertigo"
-ui_nearbylobbies_filter3 "survival"
+ui_mainmenu_bkgnd_movie1 "anubis"
+ui_nearbylobbies_filter3 "competitive"
 ui_news_last_read_link "https://blog.counter-strike.net/pl/index.php/2020/06/30481/"
-ui_playsettings_maps_listen_casual "random_classic"
-ui_playsettings_maps_listen_competitive "mg_de_mirage"
+ui_playsettings_maps_listen_casual "mg_de_mirage"
+ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
-ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_vertigo"
+ui_playsettings_maps_listen_scrimcomp2v2 "mg_de_inferno"
 ui_playsettings_maps_listen_skirmish "mg_skirmish_flyingscoutsman"
-ui_playsettings_maps_official_casual "mg_casualdelta"
+ui_playsettings_maps_official_casual "mg_casualsigma"
 ui_playsettings_maps_official_deathmatch "mg_casualdelta"
-ui_playsettings_maps_workshop "@workshop/860815637/de_dustydust_beta8"
-ui_playsettings_mode_listen "competitive"
+ui_playsettings_maps_workshop "@workshop/308490450/xhair_v3"
+ui_playsettings_mode_listen "casual"
 ui_playsettings_mode_official_v20 "competitive"
 ui_playsettings_survival_solo "0"
 ui_playsettings_warmup_map_name "de_mirage"
@@ -333,63 +290,79 @@ ui_popup_weaponupdate_version "0"
 ui_setting_advertiseforhire_auto "1"
 ui_setting_advertiseforhire_auto_last "/competitive"
 ui_steam_overlay_notification_position "topleft"
-ui_vanitysetting_loadoutslot_ct "rifle4"
-ui_vanitysetting_loadoutslot_t "heavy4"
-ui_vanitysetting_team "ct"
+ui_vanitysetting_loadoutslot_ct "rifle0"
+ui_vanitysetting_loadoutslot_t "rifle1"
+ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
 voice_caster_enable "0"
-voice_caster_scale "0.000000"
-voice_enable "1"
+voice_caster_scale "1"
 voice_forcemicrecord "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
 voice_modenable "1"
 voice_positional "0"
-voice_scale "0.301157"
+voice_scale "0.986551"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.098655"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
 vprof_verbose "1"
 vprof_warningmsec "10"
 
-//NetSet
-net_graph "1"
-net_graphheight "64"
-net_graphholdsvframerate "0"
-net_graphipc "0"
-net_graphmsecs "400"
-net_graphpos "1"
-net_graphproportionalfont "1"
-net_graphshowinterp "1"
-net_graphshowlatency "1"
-net_graphshowsvframerate "0"
-net_graphsolid "1"
-net_graphtext "1"
-net_maxroutable "1200"
-mm_dedicated_search_maxping "150"
-
 //Viewmodel
-viewmodel_fov "68"
-viewmodel_offset_x "2.500000"
-viewmodel_offset_y "0"
-viewmodel_offset_z "-1.500000"
-viewmodel_presetpos "3"
+viewmodel_fov "60"
+viewmodel_offset_x "1"
+viewmodel_offset_y "1"
+viewmodel_offset_z "-1"
+viewmodel_presetpos "1"
 viewmodel_recoil "1.0"
 cl_viewmodel_shift_left_amt "1.5"
 cl_viewmodel_shift_right_amt "0.75"
 cl_bob_lower_amt "21"
-cl_bobamt_lat "0.4"
-cl_bobamt_vert "0.25"
+cl_bobamt_lat "0.1"
+cl_bobamt_vert "0.1"
 cl_bobcycle "0.98"
 
+//Audio
+volume "0.379043"
+voice_enable "1"
+snd_deathcamera_volume "0.3"
+snd_duckerattacktime "0.5"
+snd_duckerreleasetime "2.5"
+snd_duckerthreshold "0.15"
+snd_ducking_off "1"
+snd_ducktovolume "0.55"
+snd_dzmusic_volume "0.2"
+snd_hrtf_distance_behind "100"
+snd_hrtf_voice_delay "0.1"
+snd_hwcompat "0"
+snd_mapobjective_volume "0"
+snd_menumusic_volume "0.000000"
+snd_mix_async "1"
+snd_mix_async_onetime_reset "1"
+snd_mixahead "0.025"
+snd_music_selection "2"
+snd_music_volume_onetime_reset_2 "1"
+snd_musicvolume_multiplier_inoverlay "0.000000"
+snd_mute_losefocus "1"
+snd_mute_mvp_music_live_players "0"
+snd_mvp_volume "1.0"
+snd_pitchquality "1"
+snd_roundend_volume "0"
+snd_roundstart_volume "0"
+snd_surround_speakers "5"
+snd_tensecondwarning_volume "0"
+
+//NoJoy
+joystick "0"
+joystick_force_disabled "1"
+joystick_force_disabled_set_from_options "1"
+key_bind_version "5"
+
 //Mouse
-sensitivity "4.508170"
-zoom_sensitivity_ratio_joystick "1.0"
-zoom_sensitivity_ratio_mouse "1.0"
+sensitivity "1.261618"
 m_customaccel "0"
 m_customaccel_exponent "1.05"
 m_customaccel_max "0"
@@ -402,45 +375,92 @@ m_pitch "0.022"
 m_rawinput "1"
 m_side "0.8"
 m_yaw "0.022"
-joystick "0"
-joystick_force_disabled "1"
-joystick_force_disabled_set_from_options "1"
+zoom_sensitivity_ratio_joystick "1.0"
+zoom_sensitivity_ratio_mouse "1.0"
 
 //Crosshair
+crosshair "1"
 cl_crosshair_drawoutline "0"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
+cl_crosshair_dynamic_maxdist_splitratio "0.3"
 cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "7"
+cl_crosshair_dynamic_splitalpha_outermod "1.000000"
+cl_crosshair_dynamic_splitdist "5"
 cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "0.974972"
+cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
-cl_crosshairalpha "255.000000"
-cl_crosshaircolor "5"
-cl_crosshaircolor_b "192.769348"
-cl_crosshaircolor_g "99.304222"
-cl_crosshaircolor_r "228.518875"
+cl_crosshairalpha "255"
+cl_crosshaircolor "1"
+cl_crosshaircolor_b "50"
+cl_crosshaircolor_g "250"
+cl_crosshaircolor_r "50"
 cl_crosshairdot "0"
-cl_crosshairgap "-0.015325"
+cl_crosshairgap "-2"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "2.492336"
+cl_crosshairsize "2.5"
 cl_crosshairstyle "4"
-cl_crosshairthickness "0.406350"
+cl_crosshairthickness "1"
 cl_crosshairusealpha "1"
 
+//NetSet
+rate "786432"
+net_graph "1"
+net_graphheight "9999"
+net_graphholdsvframerate "0"
+net_graphipc "0"
+net_graphmsecs "400"
+net_graphpos "1"
+net_graphproportionalfont "0"
+net_graphshowinterp "1"
+net_graphshowlatency "1"
+net_graphshowsvframerate "0"
+net_graphsolid "1"
+net_graphtext "1"
+net_maxroutable "1200"
+net_scale "5"
+net_steamcnx_allowrelay "1"
+
+//Radar
+cl_hud_radar_scale "1"
+cl_radar_always_centered "1"
+cl_radar_icon_scale_min "0.6"
+cl_radar_rotate "1"
+cl_radar_scale "0.7"
+cl_radar_square_with_scoreboard "1"
+cl_radial_radio_tab "0"
+cl_radialmenu_deadzone_size "0.04"
+
 //Shado
+con_enable "1"
+developer 1
+con_filter_enable 2
+con_filter_text_out "Player:"
+con_filter_text "damage"
 alias "1" "bind Mouse4 +voicerecord"
 alias "11" "unbind Mouse4"
-alias "2" "mat_monitorgamma 1.6"
-alias "3" "mat_monitorgamma 2.2"
+alias "2" "mat_monitorgamma 1.857491"
+alias "3" "mat_monitorgamma 2.3"
 alias "4" "mat_setvideomode 1920 1080 0"
 alias "5" "mat_setvideomode 1280 960 0"
-alias "back" "exec Shadoweee/wojmajCleaner.cfg; exec Shadoweee/ShadCfglauncherCleaner.cfg; exec Shadoweee/ShadCfglauncher.cfg"
+alias "vol" "vol1"
+alias "vol1" "volume 0.379043; alias "vol" "vol2"; echo "Volume set to 0.379043""
+alias "vol2" "volume 0.1; alias "vol" "vol1"; echo "Volume set to 0.1""
+alias "rad" "rad1"
+alias "rad1" "cl_radar_always_centered 1; cl_radar_scale 0.7; cl_radar_icon_scale_min 0.6; alias "rad" "rad2""
+alias "rad2" "cl_radar_always_centered 0; cl_radar_scale 0.4; cl_radar_icon_scale_min 0.4; alias "rad" "rad1""
+bind "c" "rad"
+alias "back" "exec Shadoweee/cienkiCleaner.cfg; exec Shadoweee/ShadCfglauncherCleaner.cfg; exec Shadoweee/ShadCfglauncher.cfg"
 alias "+jumpthrow" "+jump;-attack"
 alias "-jumpthrow" "-jump"
 bind alt "+jumpthrow"
+alias "+scorenet" "+showscores; net_graphheight 0"
+alias "-scorenet" "-showscores; net_graphheight 9999"
+bind "TAB" "+scorenet"
+alias "+paka" "+use; gameinstructor_enable 1"
+alias "-paka" "-use; gameinstructor_enable 0"
+bind "e" "+paka"
+
 
 alias "dot" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthickness 1.5; cl_crosshairgap 5000; cl_crosshaircolor_g 255; cl_crosshaircolor_r 0; cl_crosshaircolor_b 0"
 
@@ -449,30 +469,32 @@ alias "dot" "cl_crosshair_outlinethickness 0; cl_crosshairdot 1; cl_crosshairthi
 clear
 
 
-echo " __          __   _                 _ ___  ___  "
-echo " \ \        / /  (_)               (_)__ \|__ \ "
-echo "  \ \  /\  / /__  _ _ __ ___   __ _ _   ) |  ) |"
-echo "   \ \/  \/ / _ \| | '_ ` _ \ / _` | | / /  / / "
-echo "    \  /\  / (_) | | | | | | | (_| | |/ /_ / /_ "
-echo "     \/  \/ \___/| |_| |_| |_|\__,_| |____|____|"
-echo "                _/ |              _/ |          "
-echo "               |__/              |__/           "
+echo "  _______ _                __ "
+echo " |__   __(_)              /_ |"
+echo "    | |   _  __ _  ___ _ __| |"
+echo "    | |  | |/ _` |/ _ \ '__| |"
+echo "    | |  | | (_| |  __/ |  | |"
+echo "    |_|  |_|\__, |\___|_|  |_|"
+echo "             __/ |            "
+echo "            |___/             "
 
 echo "┌──────────────────────────────────────────────────────┐"
-echo "|          Pomyslnie zaladowano exec Wojmaj22.         |"
+echo "|           Pomyslnie zaladowano exec Tiger1.          |"
 echo "└──────────────────────────────────────────────────────┘"
 echo " "
 echo "┌──────────────────────────────────────────────────────┐"
 echo "| Wpisz 1,    aby zbinodwac Mouse4 pod +voicerecord    |"
 echo "| Wpisz 11,   aby odbinodwac Mouse4 z +voicerecord     |"
-echo "| Wpisz 2,    aby zmienic gamma na 1.6                 |"
-echo "| Wpisz 3,    aby zmienic gamma na 2.2                 |"
+echo "| Wpisz 2,    aby zmienic gamma na 1.857491            |"
+echo "| Wpisz 3,    aby zmienic gamma na 2.3                 |"
 echo "| Wpisz 4,    aby ustawic rozdzialke na 1920 x 1080    |"
 echo "| Wpisz 5,    aby ustawic rozdzialke na 1280 x 960     |"
+echo "| Wpisz vol,  aby ustawic volume na 0.379043 albo 0.1  |"
+echo "| Wpisz rad,  aby zmienic rozmiar radaru [Bound to 'C']|"
 echo "| Wpisz dot,  aby zmienic celownik na kropke           |"
 echo "| Wpisz back, aby powrócic do wyboru configu           |"
 echo "└──────────────────────────────────────────────────────┘"
 echo " "
 echo "┌──────────────────────────────────────────────────────┐"
-echo "| Exec made by Shadoweee | Version 1.1 @ 24.06.2020    |"
+echo "| Exec made by Shadoweee | Version 2.0 @ 24.06.2020    |"
 echo "└──────────────────────────────────────────────────────┘"
